[package]
authors = ["Alex Whitney <adwhit@fastmail.com>"]
name = "crawlrs"
version = "0.1.0"

[dependencies]
error-chain = "0.8.1"
futures = "0.1.9"
html5ever = "0.12.1"
lazy_static = "0.2.2"
tokio-core = "0.1.3"
tokio-timer = "0.1.0"

[dependencies.hyper]
git = "https://github.com/hyperium/hyper/"
